2010-10-18  Yongjun Zhang  <yongjun_zhang@apple.com>

Reviewed by Darin Adler.

        Missing support for document.createEvent("OrientationEvent")
        https://bugs.webkit.org/show_bug.cgi?id=32492

        Add support for document.createEvent("OrientationEvent") to help unit testing of
        onOrientationChange event.

        * fast/dom/DeviceOrientation/create-event-onorientationchange-expected.txt: Added.
        * fast/dom/DeviceOrientation/create-event-onorientationchange.html: Added.
        * fast/dom/DeviceOrientation/script-tests/create-event-onorientationchange.js: Added.
2010-10-18  Yongjun Zhang  <yongjun_zhang@apple.com>

        Reviewed by Darin Adler.

        Missing support for document.createEvent("OrientationEvent")
        https://bugs.webkit.org/show_bug.cgi?id=32492

        Add support for document.createEvent("OrientationEvent") to help unit testing of
        onOrientationChange event.

        Test: fast/dom/DeviceOrientation/create-event-onorientationchange.html

        * dom/Document.cpp:
        (WebCore::Document::createEvent):

Canonical link: https://commits.webkit.org/60550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69984 268f45cc-cd09-0410-ab3c-d52691b4dbfc